After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 596590 - Fix BluetoothFilterWidget property binding and document the widget
Fix BluetoothFilterWidget property binding and document the widget
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2009-09-28 12:12 UTC by Joshua Lock
Modified: 2009-09-29 11:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix BluetoothFilterWidget property binding and document the widget (7.97 KB, patch)
2009-09-28 12:12 UTC, Joshua Lock
none Details | Review
Fix BluetoothFilterWidget property binding and document the widget (8.36 KB, patch)
2009-09-29 11:31 UTC, Joshua Lock
committed Details | Review

Description Joshua Lock 2009-09-28 12:12:07 UTC
The property binding needs to be two way so that the properties are
propogated regardless of whether they are set on the chooser or the filter.
Add an extra mode to test-deviceselection, the "filter" option, which
creates the wizard with two filters so that their synchronicity can be
tested.
Comment 1 Joshua Lock 2009-09-28 12:12:09 UTC
Created attachment 144168 [details] [review]
Fix BluetoothFilterWidget property binding and document the widget
Comment 2 Joshua Lock 2009-09-29 11:31:08 UTC
Created attachment 144251 [details] [review]
Fix BluetoothFilterWidget property binding and document the widget

The property binding needs to be two way so that the properties are
propogated regardless of whether they are set on the chooser or the filter.
Add an extra mode to test-deviceselection, the "filter" option, which
creates the wizard with two filters so that their synchronicity can be
tested.