Fix BluetoothFilterWidget property binding and document the widget

The property binding needs to be two way so that the properties are
propogated regardless of whether they are set on the chooser or the filter.
Add an extra mode to test-deviceselection, the "filter" option, which
creates the wizard with two filters so that their synchronicity can be
tested.

https://bugzilla.gnome.org/show_bug.cgi?id=596590